Augmented Dickey-Fuller test check for the stationarity

--- a/ARIMA_Model.ipynb
+++ b/ARIMA_Model.ipynb
@@ -489,6 +489,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dickey fuller test\n",
+    "from statsmodels.tsa.stattools import adfuller"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def adf_test(series):\n",
+    "    result = adfuller(series)\n",
+    "    print('adf Statictics : {}'.format(result[0]))\n",
+    "    print('p- value : {}'.format(result[1]))\n",
+    "    if result[1] <= 0.5:\n",
+    "        print('Strong evidance against the null hypothesis, reject the null hypothesis. Data has no unit root and is stationary.')\n",
+    "    else:\n",
+    "        print('Week evidance against null hypothesis, time series has a unit root, indicating it is non-stationary.')\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "adf Statictics : 0.8153688792060482\n",
+      "p- value : 0.991880243437641\n",
+      "Week evidance against null hypothesis, time series has a unit root, indicating it is non-stationary.\n"
+     ]
+    }
+   ],
+   "source": [
+    "adf_test(df_airline['Thousands of Passengers'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
