--- a/ARIMA_Model.ipynb
+++ b/ARIMA_Model.ipynb
@@ -535,6 +535,248 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Converting non stationarity to stationarity\n",
+    "# Use techniques Differencing(1st differencing)\n",
+    "df_airline['Passenger first difference'] = df_airline['Thousands of Passengers'] - df_airline['Thousands of Passengers'].shift(1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Thousands of Passengers</th>\n",
+       "      <th>Passenger first difference</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Month</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1949-01-01</th>\n",
+       "      <td>112.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1949-02-01</th>\n",
+       "      <td>118.0</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1949-03-01</th>\n",
+       "      <td>132.0</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1949-04-01</th>\n",
+       "      <td>129.0</td>\n",
+       "      <td>-3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1949-05-01</th>\n",
+       "      <td>121.0</td>\n",
+       "      <td>-8.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Thousands of Passengers  Passenger first difference\n",
+       "Month                                                          \n",
+       "1949-01-01                    112.0                         NaN\n",
+       "1949-02-01                    118.0                         6.0\n",
+       "1949-03-01                    132.0                        14.0\n",
+       "1949-04-01                    129.0                        -3.0\n",
+       "1949-05-01                    121.0                        -8.0"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_airline.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "adf Statictics : -2.8292668241699994\n",
+      "p- value : 0.0542132902838255\n",
+      "Strong evidance against the null hypothesis, reject the null hypothesis. Data has no unit root and is stationary.\n"
+     ]
+    }
+   ],
+   "source": [
+    "adf_test(df_airline['Passenger first difference'].dropna())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use techniques Differencing(2nd differencing)\n",
+    "df_airline['Passenger 2nd difference'] = df_airline['Passenger first difference'] - df_airline['Passenger first difference'].shift(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Thousands of Passengers</th>\n",
+       "      <th>Passenger first difference</th>\n",
+       "      <th>Passenger 2nd difference</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Month</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1949-01-01</th>\n",
+       "      <td>112.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1949-02-01</th>\n",
+       "      <td>118.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1949-03-01</th>\n",
+       "      <td>132.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1949-04-01</th>\n",
+       "      <td>129.0</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>-17.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1949-05-01</th>\n",
+       "      <td>121.0</td>\n",
+       "      <td>-8.0</td>\n",
+       "      <td>-5.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Thousands of Passengers  Passenger first difference  \\\n",
+       "Month                                                             \n",
+       "1949-01-01                    112.0                         NaN   \n",
+       "1949-02-01                    118.0                         6.0   \n",
+       "1949-03-01                    132.0                        14.0   \n",
+       "1949-04-01                    129.0                        -3.0   \n",
+       "1949-05-01                    121.0                        -8.0   \n",
+       "\n",
+       "            Passenger 2nd difference  \n",
+       "Month                                 \n",
+       "1949-01-01                       NaN  \n",
+       "1949-02-01                       NaN  \n",
+       "1949-03-01                       8.0  \n",
+       "1949-04-01                     -17.0  \n",
+       "1949-05-01                      -5.0  "
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_airline.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "adf Statictics : -16.384231542468505\n",
+      "p- value : 2.7328918500142407e-29\n",
+      "Strong evidance against the null hypothesis, reject the null hypothesis. Data has no unit root and is stationary.\n"
+     ]
+    }
+   ],
+   "source": [
+    "adf_test(df_airline['Passenger 2nd difference'].dropna())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
