SARIMAX Model train

--- a/ARIMA_Model.ipynb
+++ b/ARIMA_Model.ipynb
@@ -4256,6 +4256,298 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 353,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Forecasting\n",
+    "forecast = Model_ARIMA_fit.get_forecast(steps=12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 354,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<statsmodels.tsa.statespace.mlemodel.PredictionResultsWrapper at 0x1720f5f2960>"
+      ]
+     },
+     "execution_count": 354,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "forecast"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 355,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forecast_mean = forecast.predicted_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 356,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1956-01-01    300.183612\n",
+       "1956-02-01    309.478354\n",
+       "1956-03-01    316.443013\n",
+       "1956-04-01    307.827542\n",
+       "1956-05-01    318.544231\n",
+       "1956-06-01    348.922079\n",
+       "1956-07-01    366.020285\n",
+       "1956-08-01    346.567531\n",
+       "1956-09-01    332.120966\n",
+       "1956-10-01    307.734753\n",
+       "1956-11-01    311.623910\n",
+       "1956-12-01    339.828195\n",
+       "Freq: MS, Name: predicted_mean, dtype: float64"
+      ]
+     },
+     "execution_count": 356,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "forecast_mean"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SARIMAX\n",
+    "### Create a SARIMAX Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 357,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\HP\\anaconda3\\envs\\python_new\\Lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: No frequency information was provided, so inferred frequency MS will be used.\n",
+      "  self._init_dates(dates, freq)\n",
+      "c:\\Users\\HP\\anaconda3\\envs\\python_new\\Lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: No frequency information was provided, so inferred frequency MS will be used.\n",
+      "  self._init_dates(dates, freq)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from statsmodels.tsa.statespace.sarimax import SARIMAX\n",
+    "Model_SARIMAX = SARIMAX(train_data['Thousands of Passengers'], order=(3,0,5), seasonal_order=(1,1,1,12))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 358,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\HP\\anaconda3\\envs\\python_new\\Lib\\site-packages\\statsmodels\\base\\model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n"
+     ]
+    }
+   ],
+   "source": [
+    "Model_SARIMAX_fit = Model_SARIMAX.fit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 360,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>SARIMAX Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>        <td>Thousands of Passengers</td>     <th>  No. Observations:  </th>    <td>84</td>   \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>           <td>SARIMAX(3, 0, 5)x(1, 1, [1], 12)</td> <th>  Log Likelihood     </th> <td>-263.914</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>                    <td>Wed, 26 Jun 2024</td>         <th>  AIC                </th>  <td>549.829</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                        <td>14:25:55</td>             <th>  BIC                </th>  <td>574.872</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Sample:</th>                     <td>01-01-1949</td>            <th>  HQIC               </th>  <td>559.799</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th></th>                           <td>- 12-01-1955</td>           <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>                <td>opg</td>               <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "      <td></td>        <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>ar.L1</th>    <td>    0.5572</td> <td>    3.374</td> <td>    0.165</td> <td> 0.869</td> <td>   -6.056</td> <td>    7.171</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>ar.L2</th>    <td>    0.8514</td> <td>    0.385</td> <td>    2.212</td> <td> 0.027</td> <td>    0.097</td> <td>    1.606</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>ar.L3</th>    <td>   -0.4197</td> <td>    3.071</td> <td>   -0.137</td> <td> 0.891</td> <td>   -6.439</td> <td>    5.600</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>ma.L1</th>    <td>    0.2026</td> <td>    3.287</td> <td>    0.062</td> <td> 0.951</td> <td>   -6.241</td> <td>    6.646</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>ma.L2</th>    <td>   -0.5162</td> <td>    2.426</td> <td>   -0.213</td> <td> 0.832</td> <td>   -5.272</td> <td>    4.240</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>ma.L3</th>    <td>   -0.0931</td> <td>    0.714</td> <td>   -0.130</td> <td> 0.896</td> <td>   -1.493</td> <td>    1.307</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>ma.L4</th>    <td>   -0.1899</td> <td>    0.543</td> <td>   -0.350</td> <td> 0.727</td> <td>   -1.254</td> <td>    0.874</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>ma.L5</th>    <td>    0.1673</td> <td>    0.928</td> <td>    0.180</td> <td> 0.857</td> <td>   -1.651</td> <td>    1.986</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>ar.S.L12</th> <td>   -0.3126</td> <td>    0.868</td> <td>   -0.360</td> <td> 0.719</td> <td>   -2.014</td> <td>    1.388</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>ma.S.L12</th> <td>    0.1055</td> <td>    0.954</td> <td>    0.111</td> <td> 0.912</td> <td>   -1.764</td> <td>    1.975</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>sigma2</th>   <td>   84.1002</td> <td>   32.906</td> <td>    2.556</td> <td> 0.011</td> <td>   19.605</td> <td>  148.595</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Ljung-Box (L1) (Q):</th>     <td>0.01</td> <th>  Jarque-Bera (JB):  </th> <td>1.88</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Q):</th>                <td>0.93</td> <th>  Prob(JB):          </th> <td>0.39</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Heteroskedasticity (H):</th> <td>2.41</td> <th>  Skew:              </th> <td>0.40</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(H) (two-sided):</th>    <td>0.04</td> <th>  Kurtosis:          </th> <td>2.94</td>\n",
+       "</tr>\n",
+       "</table><br/><br/>Warnings:<br/>[1] Covariance matrix calculated using the outer product of gradients (complex-step)."
+      ],
+      "text/latex": [
+       "\\begin{center}\n",
+       "\\begin{tabular}{lclc}\n",
+       "\\toprule\n",
+       "\\textbf{Dep. Variable:}          &     Thousands of Passengers      & \\textbf{  No. Observations:  } &     84      \\\\\n",
+       "\\textbf{Model:}                  & SARIMAX(3, 0, 5)x(1, 1, [1], 12) & \\textbf{  Log Likelihood     } &  -263.914   \\\\\n",
+       "\\textbf{Date:}                   &         Wed, 26 Jun 2024         & \\textbf{  AIC                } &  549.829    \\\\\n",
+       "\\textbf{Time:}                   &             14:25:55             & \\textbf{  BIC                } &  574.872    \\\\\n",
+       "\\textbf{Sample:}                 &            01-01-1949            & \\textbf{  HQIC               } &  559.799    \\\\\n",
+       "\\textbf{}                        &           - 12-01-1955           & \\textbf{                     } &             \\\\\n",
+       "\\textbf{Covariance Type:}        &               opg                & \\textbf{                     } &             \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "\\begin{tabular}{lcccccc}\n",
+       "                  & \\textbf{coef} & \\textbf{std err} & \\textbf{z} & \\textbf{P$> |$z$|$} & \\textbf{[0.025} & \\textbf{0.975]}  \\\\\n",
+       "\\midrule\n",
+       "\\textbf{ar.L1}    &       0.5572  &        3.374     &     0.165  &         0.869        &       -6.056    &        7.171     \\\\\n",
+       "\\textbf{ar.L2}    &       0.8514  &        0.385     &     2.212  &         0.027        &        0.097    &        1.606     \\\\\n",
+       "\\textbf{ar.L3}    &      -0.4197  &        3.071     &    -0.137  &         0.891        &       -6.439    &        5.600     \\\\\n",
+       "\\textbf{ma.L1}    &       0.2026  &        3.287     &     0.062  &         0.951        &       -6.241    &        6.646     \\\\\n",
+       "\\textbf{ma.L2}    &      -0.5162  &        2.426     &    -0.213  &         0.832        &       -5.272    &        4.240     \\\\\n",
+       "\\textbf{ma.L3}    &      -0.0931  &        0.714     &    -0.130  &         0.896        &       -1.493    &        1.307     \\\\\n",
+       "\\textbf{ma.L4}    &      -0.1899  &        0.543     &    -0.350  &         0.727        &       -1.254    &        0.874     \\\\\n",
+       "\\textbf{ma.L5}    &       0.1673  &        0.928     &     0.180  &         0.857        &       -1.651    &        1.986     \\\\\n",
+       "\\textbf{ar.S.L12} &      -0.3126  &        0.868     &    -0.360  &         0.719        &       -2.014    &        1.388     \\\\\n",
+       "\\textbf{ma.S.L12} &       0.1055  &        0.954     &     0.111  &         0.912        &       -1.764    &        1.975     \\\\\n",
+       "\\textbf{sigma2}   &      84.1002  &       32.906     &     2.556  &         0.011        &       19.605    &      148.595     \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "\\begin{tabular}{lclc}\n",
+       "\\textbf{Ljung-Box (L1) (Q):}     & 0.01 & \\textbf{  Jarque-Bera (JB):  } & 1.88  \\\\\n",
+       "\\textbf{Prob(Q):}                & 0.93 & \\textbf{  Prob(JB):          } & 0.39  \\\\\n",
+       "\\textbf{Heteroskedasticity (H):} & 2.41 & \\textbf{  Skew:              } & 0.40  \\\\\n",
+       "\\textbf{Prob(H) (two-sided):}    & 0.04 & \\textbf{  Kurtosis:          } & 2.94  \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "%\\caption{SARIMAX Results}\n",
+       "\\end{center}\n",
+       "\n",
+       "Warnings: \\newline\n",
+       " [1] Covariance matrix calculated using the outer product of gradients (complex-step)."
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                                      SARIMAX Results                                       \n",
+       "============================================================================================\n",
+       "Dep. Variable:              Thousands of Passengers   No. Observations:                   84\n",
+       "Model:             SARIMAX(3, 0, 5)x(1, 1, [1], 12)   Log Likelihood                -263.914\n",
+       "Date:                              Wed, 26 Jun 2024   AIC                            549.829\n",
+       "Time:                                      14:25:55   BIC                            574.872\n",
+       "Sample:                                  01-01-1949   HQIC                           559.799\n",
+       "                                       - 12-01-1955                                         \n",
+       "Covariance Type:                                opg                                         \n",
+       "==============================================================================\n",
+       "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
+       "------------------------------------------------------------------------------\n",
+       "ar.L1          0.5572      3.374      0.165      0.869      -6.056       7.171\n",
+       "ar.L2          0.8514      0.385      2.212      0.027       0.097       1.606\n",
+       "ar.L3         -0.4197      3.071     -0.137      0.891      -6.439       5.600\n",
+       "ma.L1          0.2026      3.287      0.062      0.951      -6.241       6.646\n",
+       "ma.L2         -0.5162      2.426     -0.213      0.832      -5.272       4.240\n",
+       "ma.L3         -0.0931      0.714     -0.130      0.896      -1.493       1.307\n",
+       "ma.L4         -0.1899      0.543     -0.350      0.727      -1.254       0.874\n",
+       "ma.L5          0.1673      0.928      0.180      0.857      -1.651       1.986\n",
+       "ar.S.L12      -0.3126      0.868     -0.360      0.719      -2.014       1.388\n",
+       "ma.S.L12       0.1055      0.954      0.111      0.912      -1.764       1.975\n",
+       "sigma2        84.1002     32.906      2.556      0.011      19.605     148.595\n",
+       "===================================================================================\n",
+       "Ljung-Box (L1) (Q):                   0.01   Jarque-Bera (JB):                 1.88\n",
+       "Prob(Q):                              0.93   Prob(JB):                         0.39\n",
+       "Heteroskedasticity (H):               2.41   Skew:                             0.40\n",
+       "Prob(H) (two-sided):                  0.04   Kurtosis:                         2.94\n",
+       "===================================================================================\n",
+       "\n",
+       "Warnings:\n",
+       "[1] Covariance matrix calculated using the outer product of gradients (complex-step).\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 360,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Model_SARIMAX_fit.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
